add Add-In extensions to activation events

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 	"activationEvents": [
 		"onLanguage:vba",
 		"onLanguage:wwb",
-		"workspaceContains:**/*.{docm,xlsm,pptm}"
+		"workspaceContains:**/*.{docm,xlsm,pptm,xlam,ppam}"
 	],
 	"main": "./out/extension.js",
 	"capabilities": {
