--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         run: pnpm run test
 
 
-  compile-and-package:
+  package:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -42,12 +42,8 @@ jobs:
       - uses: pnpm/action-setup@v3
         with:
           version: 8
-      - uses: bait-lang/setup-bait@main
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
-
-      - name: Compile
-        run: pnpm run compile
 
       - name: Package
         run: pnpm run package
@@ -64,7 +60,7 @@ jobs:
   publish:
     needs:
       - test
-      - compile-and-package
+      - package
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     steps:
