--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,10 +21,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 18.x
-      - uses: pnpm/action-setup@v3
-        with:
-          version: 8
+          node-version-file: package.json
+      - uses: pnpm/action-setup@v4
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
@@ -32,22 +30,16 @@ jobs:
         run: pnpm run test
 
 
-  compile-and-package:
+  package:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 18.x
-      - uses: pnpm/action-setup@v3
-        with:
-          version: 8
-      - uses: bait-lang/setup-bait@main
+          node-version-file: package.json
+      - uses: pnpm/action-setup@v4
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
-
-      - name: Compile
-        run: pnpm run compile
 
       - name: Package
         run: pnpm run package
@@ -64,7 +56,7 @@ jobs:
   publish:
     needs:
       - test
-      - compile-and-package
+      - package
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     steps:
@@ -74,7 +66,7 @@ jobs:
           name: ${{ env.VSIX_FILE }}
 
       - name: Create Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           fail_on_unmatched_files: true
           files: ${{ env.VSIX_FILE }}
