--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"displayName": "VBA",
 	"description": "VBA tooling, syntax highlighting and snippets.",
 	"icon": "images/icon.png",
-	"version": "1.0.3",
-	"license": "MIT",
+	"version": "1.0.4",
+	"license": "MPL-2.0",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/serkonda7/vscode-vba"
