move PtrSafe to VBA

--- a/.editorconfig
+++ b/.editorconfig
@@ -4,6 +4,10 @@ root = true
 indent_style = tab
 indent_size = 4
 
+[*.bas]
+indent_style = space
+indent_size = 4
+
 [*.md]
 indent_style = space
 indent_size = 3
