--- a/package.json
+++ b/package.json
@@ -147,13 +147,17 @@
     }
   },
   "scripts": {
-    "test": "pnpm run convert-yaml && pnpm run test-vb6 && pnpm run test-vba && pnpm run test-wwb",
-    "test-vb6": "vscode-tmgrammar-test -g ./out/vb6.json \"syntaxes/tests/vb6/*.bas\"",
-    "test-vba": "vscode-tmgrammar-test -g ./out/vba.json \"syntaxes/tests/vba/*.bas\"",
-    "test-wwb": "vscode-tmgrammar-test -g ./out/wwb.json \"syntaxes/tests/wwb/*.wwd\"",
-    "install-dev-ext": "vsce package -o ./out/vscode-vba-dev.vsix && code --install-extension ./out/vscode-vba-dev.vsix --force",
+    "test": "pnpm run convert-yaml && pnpm run test:all",
+    "test:all": "pnpm run test:vba && pnpm run test:vb6 && pnpm run test:wwb",
+    "test:vba": "vscode-tmgrammar-test -g ./out/vba.json 'syntaxes/tests/vba/*.bas'",
+    "test:vb6": "vscode-tmgrammar-test -g ./out/vb6.json 'syntaxes/tests/vb6/*.bas'",
+    "test:wwb": "vscode-tmgrammar-test -g ./out/wwb.json 'syntaxes/tests/wwb/*.wwd'",
+
     "package": "vsce package",
-    "convert-yaml": "yaml2json language-configuration.yml \"syntaxes/*.yaml-tmlanguage\" \"snippets/*.yml\"",
+    "package:dev": "vsce package -o ./out/vscode-vba-dev.vsix",
+    "install:dev": "pnpm run package:dev && code --install-extension ./out/vscode-vba-dev.vsix --force",
+
+    "convert-yaml": "yaml2json language-configuration.yml 'syntaxes/*.yaml-tmlanguage' 'snippets/*.yml'",
     "vscode:prepublish": "pnpm run convert-yaml"
   },
   "devDependencies": {
