--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "icon": "images/icon.png",
   "version": "1.2.1-dev",
   "license": "MPL-2.0",
+  "publisher": "serkonda7",
   "repository": {
     "type": "git",
     "url": "https://github.com/serkonda7/vscode-vba"
   },
-  "publisher": "serkonda7",
+  "bugs": {
+    "url": "https://github.com/serkonda7/vscode-vba/issues"
+  },
   "categories": [
     "Programming Languages",
     "Snippets",
@@ -142,9 +145,9 @@
   "scripts": {
     "test": "pnpm run convert-yaml && pnpm run test:all",
     "test:all": "pnpm run test:vba && pnpm run test:vb6 && pnpm run test:wwb",
-    "test:vba": "vscode-tmgrammar-test -g ./out/vba.json \"syntaxes/tests/vba/*.bas\"",
-    "test:vb6": "vscode-tmgrammar-test -g ./out/vb6.json \"syntaxes/tests/vb6/*.bas\"",
-    "test:wwb": "vscode-tmgrammar-test -g ./out/wwb.json \"syntaxes/tests/wwb/*.wwd\"",
+    "test:vba": "textmate-grammar-test -g ./out/vba.json \"syntaxes/tests/vba/*.bas\"",
+    "test:vb6": "textmate-grammar-test -g ./out/vb6.json \"syntaxes/tests/vb6/*.bas\"",
+    "test:wwb": "textmate-grammar-test -g ./out/wwb.json \"syntaxes/tests/wwb/*.wwd\"",
     "validate-yaml": "node ./scripts/validate_yaml.js",
     "package": "vsce package",
     "package:dev": "vsce package -o ./out/vscode-vba-dev.vsix",
@@ -156,12 +159,12 @@
     "node": ">=20",
     "vscode": "^1.90.0"
   },
-  "packageManager": "pnpm@10.24.0+sha512.01ff8ae71b4419903b65c60fb2dc9d34cf8bb6e06d03bde112ef38f7a34d6904c424ba66bea5cdcf12890230bf39f9580473140ed9c946fef328b6e5238a345a",
+  "packageManager": "pnpm@10.25.0+sha512.5e82639027af37cf832061bcc6d639c219634488e0f2baebe785028a793de7b525ffcd3f7ff574f5e9860654e098fe852ba8ac5dd5cefe1767d23a020a92f501",
   "devDependencies": {
     "@vscode/vsce": "~3.7.1",
-    "ajv": "^8.17.1",
-    "ajv-formats": "^3.0.1",
+    "ajv": "~8.17.1",
+    "ajv-formats": "~3.0.1",
     "js-yaml": "~4.1.1",
-    "vscode-tmgrammar-test": "~0.1.3"
+    "textmate-grammar-test": "~0.2.1"
   }
 }
