--- a/package.json
+++ b/package.json
@@ -143,23 +143,23 @@
     }
   },
   "scripts": {
-    "test": "pnpm run convert-yaml && pnpm run test:all",
-    "test:all": "pnpm run test:vba && pnpm run test:vb6 && pnpm run test:wwb",
+    "test": "bun run convert-yaml && bun run test:all",
+    "test:all": "bun run test:vba && bun run test:vb6 && bun run test:wwb",
     "test:vba": "textmate-grammar-test -g ./out/vba.json \"syntaxes/tests/vba/*.bas\"",
     "test:vb6": "textmate-grammar-test -g ./out/vb6.json \"syntaxes/tests/vb6/*.bas\"",
     "test:wwb": "textmate-grammar-test -g ./out/wwb.json \"syntaxes/tests/wwb/*.wwd\"",
     "validate-yaml": "node ./scripts/validate_yaml.js",
     "package": "vsce package",
     "package:dev": "vsce package -o ./out/vscode-vba-dev.vsix",
-    "install:dev": "pnpm run package:dev && code --install-extension ./out/vscode-vba-dev.vsix --force",
+    "install:dev": "bun run package:dev && code --install-extension ./out/vscode-vba-dev.vsix --force",
     "convert-yaml": "node ./scripts/convert_yaml.js",
-    "vscode:prepublish": "pnpm run convert-yaml"
+    "vscode:prepublish": "bun run convert-yaml"
   },
   "engines": {
     "node": ">=20",
     "vscode": "^1.90.0"
   },
-  "packageManager": "pnpm@10.25.0+sha512.5e82639027af37cf832061bcc6d639c219634488e0f2baebe785028a793de7b525ffcd3f7ff574f5e9860654e098fe852ba8ac5dd5cefe1767d23a020a92f501",
+  "packageManager": "bun@1.3.4",
   "devDependencies": {
     "@vscode/vsce": "~3.7.1",
     "ajv": "~8.17.1",
