--- a/package.json
+++ b/package.json
@@ -145,14 +145,14 @@
   "scripts": {
     "test": "bun run convert-yaml && bun run test:all",
     "test:all": "bun run test:vba && bun run test:vb6 && bun run test:wwb",
-    "test:vba": "textmate-grammar-test -g ./out/vba.json \"syntaxes/tests/vba/*.bas\"",
-    "test:vb6": "textmate-grammar-test -g ./out/vb6.json \"syntaxes/tests/vb6/*.bas\"",
-    "test:wwb": "textmate-grammar-test -g ./out/wwb.json \"syntaxes/tests/wwb/*.wwd\"",
-    "validate-yaml": "node ./scripts/validate_yaml.js",
-    "package": "vsce package",
-    "package:dev": "vsce package -o ./out/vscode-vba-dev.vsix",
+    "test:vba": "bunx textmate-grammar-test -g ./out/vba.json \"syntaxes/tests/vba/*.bas\"",
+    "test:vb6": "bunx textmate-grammar-test -g ./out/vb6.json \"syntaxes/tests/vb6/*.bas\"",
+    "test:wwb": "bunx textmate-grammar-test -g ./out/wwb.json \"syntaxes/tests/wwb/*.wwd\"",
+    "validate-yaml": "bun run ./scripts/validate_yaml.js",
+    "package": "bunx vsce package",
+    "package:dev": "bunx vsce package -o ./out/vscode-vba-dev.vsix",
     "install:dev": "bun run package:dev && code --install-extension ./out/vscode-vba-dev.vsix --force",
-    "convert-yaml": "node ./scripts/convert_yaml.js",
+    "convert-yaml": "bun run ./scripts/convert_yaml.js",
     "vscode:prepublish": "bun run convert-yaml"
   },
   "engines": {
