--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,35 +19,56 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v6
-      - uses: pnpm/action-setup@v4
+      - uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: 1.3.4
       - uses: actions/setup-node@v6
         with:
-          cache: 'pnpm'
           node-version-file: package.json
+      - name: Cache bun global cache
+        uses: actions/cache@v4
+        with:
+          path: ~/.bun/install/cache
+          key: ${{ runner.os }}-bun-cache-${{ hashFiles('bun.lockb') }}
+      - name: Cache node_modules
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-bun-modules-${{ hashFiles('bun.lockb') }}
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: bun install --frozen-lockfile
 
       - name: Validate YAML syntax
-        run: pnpm run validate-yaml
+        run: bun run validate
 
       - name: Test Grammars
-        run: pnpm run test
-
+        run: bun run test
 
   package:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
-      - uses: pnpm/action-setup@v4
+      - uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: 1.3.4
       - uses: actions/setup-node@v6
         with:
-          cache: 'pnpm'
           node-version-file: package.json
+      - name: Cache bun global cache
+        uses: actions/cache@v4
+        with:
+          path: ~/.bun/install/cache
+          key: ${{ runner.os }}-bun-cache-${{ hashFiles('bun.lockb') }}
+      - name: Cache node_modules
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-bun-modules-${{ hashFiles('bun.lockb') }}
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: bun install --frozen-lockfile
 
       - name: Package
-        run: pnpm run package
+        run: bun run package
 
       - name: Upload artifact
         if: startsWith(github.ref, 'refs/tags/')
