--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,19 +22,11 @@ jobs:
       - uses: oven-sh/setup-bun@v2
         with:
           bun-version: 1.3.4
-      - uses: actions/setup-node@v6
-        with:
-          node-version-file: package.json
       - name: Cache bun global cache
         uses: actions/cache@v4
         with:
           path: ~/.bun/install/cache
           key: ${{ runner.os }}-bun-cache-${{ hashFiles('bun.lockb') }}
-      - name: Cache node_modules
-        uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-bun-modules-${{ hashFiles('bun.lockb') }}
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
@@ -51,19 +43,11 @@ jobs:
       - uses: oven-sh/setup-bun@v2
         with:
           bun-version: 1.3.4
-      - uses: actions/setup-node@v6
-        with:
-          node-version-file: package.json
       - name: Cache bun global cache
         uses: actions/cache@v4
         with:
           path: ~/.bun/install/cache
           key: ${{ runner.os }}-bun-cache-${{ hashFiles('bun.lockb') }}
-      - name: Cache node_modules
-        uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-bun-modules-${{ hashFiles('bun.lockb') }}
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
@@ -94,6 +78,7 @@ jobs:
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
+          generate_release_notes: true
           fail_on_unmatched_files: true
           files: ${{ env.VSIX_FILE }}
 
