--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "VBA",
   "description": "VBA and VB6 tooling, syntax highlighting and snippets.",
   "icon": "images/icon.png",
-  "version": "1.2.1-dev",
+  "version": "1.2.1",
   "license": "MPL-2.0",
   "publisher": "serkonda7",
   "repository": {
